--- a/main.html
+++ b/main.html
@@ -6,97 +6,16 @@
     <title>Tables in Tables</title>
     <style>
         table {
-            border-collapse: collapse;
             width: 100%;
+            border-collapse: collapse;
         }
 
         th, td {
             border: 1px solid black;
-            padding: 10px;
             text-align: center;
+            padding: 10px;
         }
 
-        /* Style for the black background cell */
-        .black-cell {
+        .black-bg {
             background-color: black;
-            color: white;
-        }
-    </style>
-</head>
-<body>
-    <h1>Tables in Tables</h1>
-
-    <!-- Main Table -->
-    <table>
-        <tr>
-            <td>
-                <h3>Nested Table 1</h3>
-                <!-- Nested Table 1 -->
-                <table>
-                    <tr>
-                        <th>Column 1</th>
-                        <th>Column 2</th>
-                    </tr>
-                    <tr>
-                        <td>Data 1</td>
-                        <td>Data 2</td>
-                    </tr>
-                </table>
-            </td>
-            <td>
-                <h3>Nested Table 2</h3>
-                <!-- Nested Table 2 -->
-                <table>
-                    <tr>
-                        <th>Nested Table 2</th>
-                        <th>Column 1</th>
-                        <th>Column 2</th>
-                    </tr>
-                    <tr>
-                        <td class="black-cell">HTML</td>
-                        <td>Data 1</td>
-                        <td>Data 2</td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <h3>Nested Table 3</h3>
-                <!-- Nested Table 3 with a list -->
-                <table>
-                    <tr>
-                        <th>Column 1</th>
-                        <th>Column 2</th>
-                    </tr>
-                    <tr>
-                        <td>
-                            <ul>
-                                <li>List item 1</li>
-                                <li>List item 2</li>
-                                <li>List item 3</li>
-                            </ul>
-                        </td>
-                        <td>Data</td>
-                    </tr>
-                </table>
-            </td>
-            <td>
-                <h3>Nested Table 4</h3>
-                <!-- Nested Table 4 -->
-                <table>
-                    <tr>
-                        <th>Column 1</th>
-                        <th>Column 2</th>
-                    </tr>
-                    <tr>
-                        <td>Data 1</td>
-                        <td>Data 2</td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
-
-</body>
-</html>
+           
